# simpledns

./: .gitignore  Cargo.toml  README.md  dns.config.yaml
simple-macros/: Cargo.toml
simple-macros/src/: lib.rs
src/: cli.rs  dns_packet.rs  dns_protocol.rs  dns_resolver.rs  dns_server.rs  logger.rs  macros.rs  main.rs  settings.rs  simple_database.rs  tui.rs  utils.rs
src/tui/: base.rs  cache_list_view.rs  event.rs  mod.rs  record_list_view.rs  view.rs
thread-pooler/: Cargo.toml
thread-pooler/src/: lib.rs  manager_worker_pool.rs
