[package]
name = "simpledns"
authors = ["Lily Cybi"]
version = "0.1.0"
edition = "2021"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
notify = "6.1.1"
rand = "0.8.5"
yaml-rust = "0.4"
clap = { version = "4.4.16", features = ["derive"] }
chrono = "0.4.31"
