[package]
name = "simpledns"
authors = ["Lily Cybi"]
version = "0.1.0"
edition = "2021"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"
yaml-rust = "0.4"
clap = { version = "4.4.16", features = ["derive"] }
chrono = "0.4.31"
rusqlite = { version = "0.30.0", features = ["bundled"] }
shellexpand = "3.1.0"
ratatui = { version = "0.29.0", optional = true }

[features]
tui = ["dep:ratatui"]
