[package]
name = "simpledns"
authors = ["Lily Cybi"]
version = "0.1.0"
edition = "2021"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.31"
clap = { version = "4.4.16", features = ["derive"] }
rand = "0.8.5"
ratatui = { version = "0.29.0", optional = true }
rusqlite = { version = "0.30.0", features = ["bundled"] }
shellexpand = "3.1.0"
simple-macros = { path = "simple-macros" }
tabled = "0.17.0"
thread-pooler = { path = "thread-pooler" }
yaml-rust = "0.4"

[features]
default = ["log_debug"]
log_debug = ["log_info"]
log_info = ["log_warn"]
log_warn = ["log_error"]
log_error = []
tui = ["dep:ratatui"]
